--- a/views/teclados.html
+++ b/views/teclados.html
@@ -12,7 +12,7 @@
 <body>
   <section class="primero">
                         <!--NAVEGACION CON BOOSTRAP  -->
-    <nav class="navbar navbar-dark bg-dark">
+    <!-- <nav class="navbar navbar-dark bg-dark">
         <nav class="navbar navbar-expand-lg">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
@@ -42,6 +42,25 @@
               </ul>
             </div>
           </nav>
+      </nav> -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item ">
+              <a class="nav-link" href="#">Teclados <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../views/mouses.html">Mouses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../views/combos.html">Combos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
                         <!-- TITULO E IMAGENES BOOSTRAP + CUSTOM CSS  -->
       <div class="container">
@@ -55,7 +74,7 @@
               </div>
           </div>
           <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4  columnaMia">
                   <div class="card text-center miImagen">
                       <img src="../assets/img/customKboard1-min.jpg" class="card-img-top cardEdit" alt="primerTeclado">
                       <div class="card-body">
@@ -65,7 +84,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4  columnaMia">
                 <div class="card text-center miImagen">
                     <img src="../assets/img/customKboard3-min.jpg" class="card-img-top cardEdit " alt="primerTeclado">
                     <div class="card-body">
@@ -75,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4  columnaMia">
                 <div class="card text-center miImagen">
                     <img src="../assets/img/customKboard4-min.jpg" class="card-img-top cardEdit " alt="primerTeclado">
                     <div class="card-body">
